# signify

./: .gitignore  .gitlab-ci.yml  BUILDING.md  CMakeLists.txt  Dockerfile.buildenv  Dockerfile.buildenv-clang  Makefile  README.md  bcrypt_pbkdf.c  blf.h  cloudbuild.yaml  crypto_api.c  explicit_bzero.c  mod_ed25519.c  ohash.h  randombytes.c  randombytes.h  readpassphrase.c  readpassphrase.h  sha2.h  signify.c
debian/: control
include/: bcrypt_pbkdf.c  crypto_api.h  explicit_bzero.c  ohash.h  randombytes.h  strlcpy.c
src/: randombytes.c  readpassphrase.c  sha2.c  shafile.c  signify.c
test/: runner.sh
test/testdata/openbsd-5.6/: SHA256.sig
